@@ -2763,9 +2763,43 @@
                             <property name="visible">True</property>
                             <property name="border_width">8</property>
                             <property name="n_rows">2</property>
-                            <property name="n_columns">5</property>
+                            <property name="n_columns">6</property>
                             <property name="column_spacing">8</property>
                             <property name="row_spacing">8</property>
+                            <child>
+                              <widget class="GtkCheckButton" id="view_created">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="label" translatable="yes">Created</property>
+                                <property name="use_underline">True</property>
+                                <property name="response_id">0</property>
+                                <property name="draw_indicator">True</property>
+                              </widget>
+                              <packing>
+                                <property name="left_attach">5</property>
+                                <property name="right_attach">6</property>
+                                <property name="x_options">GTK_FILL</property>
+                                <property name="y_options"></property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkCheckButton" id="view_updated">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="label" translatable="yes">Updated</property>
+                                <property name="use_underline">True</property>
+                                <property name="response_id">0</property>
+                                <property name="draw_indicator">True</property>
+                              </widget>
+                              <packing>
+                                <property name="left_attach">5</property>
+                                <property name="right_attach">6</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                                <property name="x_options">GTK_FILL</property>
+                                <property name="y_options"></property>
+                              </packing>
+                            </child>
                             <child>
                               <widget class="GtkCheckButton" id="view_rating">
                                 <property name="visible">True</property>
