@@ -1,7 +1,7 @@
 # -*- coding: UTF-8 -*-
 # vim: fdm=marker
 __revision__ = '$Id$'
-__version__ = 5 # XXX: database format version, remember to increase after changing data structures
+__version__ = 6 # XXX: database format version, remember to increase after changing data structures
 
 # Copyright © 2009 Piotr Ożarowski
 #
