@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-09-29  Michael Jahn
+	* added fields "created" and "updated" to movie entries
+
 2010-09-25  Michael Jahn
 	* [#502990] Own settings will not be saved in HTML-Export
 
